--- a/package.json
+++ b/package.json
@@ -1,36 +1,76 @@
 {
   "name": "dice-roller-react",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "React 3D Dice Roller Component with realistic physics simulation",
   "type": "module",
+  "main": "./dist/dice-roller-react.umd.js",
+  "module": "./dist/dice-roller-react.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/dice-roller-react.es.js",
+      "require": "./dist/dice-roller-react.umd.js"
+    },
+    "./dist/style.css": "./dist/dice-roller-react.css"
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "vite --mode development",
+    "build": "npm run build:lib && npm run build:demo",
+    "build:lib": "tsc -p tsconfig.lib.json && vite build --mode library",
+    "build:demo": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepublishOnly": "npm run build:lib"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
-    "@react-three/cannon": "^6.6.0",
-    "@react-three/drei": "^10.1.2",
-    "@react-three/fiber": "^9.1.2",
-    "@types/three": "^0.177.0",
     "cannon-es": "^0.20.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "three": "^0.177.0",
     "three-stdlib": "^2.36.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/node": "^22.15.30",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/three": "^0.177.0",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
-  }
+    "vite": "^6.3.5",
+    "vite-plugin-dts": "^4.5.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JonasHildershavn/dice-roller-react.git"
+  },
+  "keywords": [
+    "react",
+    "dice",
+    "3d",
+    "threejs",
+    "physics",
+    "game",
+    "component"
+  ],
+  "author": "Jonas Hildershavn",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/JonasHildershavn/dice-roller-react/issues"
+  },
+  "homepage": "https://github.com/JonasHildershavn/dice-roller-react#readme"
 }
